--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_REACTCHAT_C34CA }}
           channelId: live
           projectId: reactchat-c34ca
+      - name: Show Firebase Hosting URL
+        run: echo "Your Firebase Hosting URL: https://reactchat-c34ca.web.app"
